simple websocket messenge notifiers
